--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,11 @@ ul li:hover {
   font-family: sh;
 }
 
+.noback {
+  background: transparent !important;
+  color: white !important;
+}
+
 .socials {
   display: flex;
   align-items: center;
@@ -611,7 +616,6 @@ span {
   border-radius: 50px;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
-
 .row1::-webkit-scrollbar {
   display: none;
 }
@@ -698,7 +702,7 @@ footer input::placeholder {
 footer form {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
   gap: 3rem;
 }
@@ -734,7 +738,7 @@ footer .maincontacttext {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 70%;
+  width: 50%;
   margin-bottom: 5rem;
 }
 footer .maincontacttext h1 {
@@ -790,10 +794,6 @@ footer a {
 
 .contact {
   width: 40rem;
-}
-
-.text {
-  transform: translateY(100%);
 }
 
 .skillrow {
