--- a/css/main.css
+++ b/css/main.css
@@ -401,6 +401,7 @@ span {
   flex-direction: column;
   background-color: #fff;
   position: relative;
+  width: 100%;
   top: -10px;
 }
 .textabout h1 {
@@ -426,9 +427,11 @@ span {
   content: "";
   background-color: #6c63ff;
   position: absolute;
+  width: 100%;
   inset: 0;
   transform: skewY(-5deg);
   z-index: -1;
+  height: 100%;
 }
 
 .prop_text {
@@ -836,5 +839,77 @@ input:focus {
   }
   100% {
     transform: translate(0, 0px);
+  }
+}
+#loading {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background-color: #fff;
+  z-index: 99;
+}
+
+#loading-image {
+  position: absolute;
+  z-index: 100;
+}
+
+.spinner {
+  border: 0 solid transparent;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: inherit;
+  height: inherit;
+  position: absolute;
+}
+
+.loader::before,
+.loader::after {
+  content: "";
+  border: 3px solid #505065;
+  border-radius: 50%;
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  opacity: 1;
+}
+
+.l1::before,
+.l1::after {
+  animation: clockwiseZ 2.5s infinite;
+}
+
+.l2::after,
+.l2::before {
+  animation: anticlockwiseZ 2.5s infinite;
+}
+
+@keyframes clockwiseZ {
+  0%, 100% {
+    transform: rotateY(0);
+  }
+  50% {
+    transform: rotateY(180deg) skew(-10deg, -5deg);
+  }
+}
+@keyframes anticlockwiseZ {
+  0%, 100% {
+    transform: rotateX(0);
+  }
+  50% {
+    transform: rotateX(-180deg) skew(10deg, 5deg);
   }
 }/*# sourceMappingURL=main.css.map */
