--- a/css/main.scss
+++ b/css/main.scss
@@ -21,7 +21,6 @@ $background-background-color: transparent;
 $background-color_4: #fafafa;
 $background-color_5: #ddd;
 
-
 /* Fonts */
 @import "https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap";
 @import "https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap";
@@ -412,6 +411,7 @@ span {
   flex-direction: column;
   background-color: $background-color_2;
   position: relative;
+  width: 100%;
   top: -10px;
   h1 {
     font-family: $font-family_3;
@@ -435,9 +435,11 @@ span {
     content: "";
     background-color: $background-color_1;
     position: absolute;
+		width: 100%;
     inset: 0;
     transform: skewY(-5deg);
     z-index: -1;
+		height: 100%;
   }
 }
 .prop_text {
@@ -611,9 +613,9 @@ span {
     rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 
-		&::-webkit-scrollbar {
-			display: none;
-		}
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .cards {
@@ -831,3 +833,81 @@ input:focus {
     transform: translate(0, -0px);
   }
 }
+
+
+
+#loading {
+  position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background-color: #fff;
+  z-index: 99;
+}
+
+#loading-image {
+  position: absolute;
+  z-index: 100;
+}
+
+.spinner {
+	border: 0 solid transparent;
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+ }
+ 
+ .loader {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: inherit;
+	height: inherit;
+	position: absolute;
+ }
+ 
+ .loader::before,
+ .loader::after {
+	content: '';
+	border: 3px solid #505065;
+	border-radius: 50%;
+	width: inherit;
+	height: inherit;
+	position: absolute;
+	opacity: 1;
+ }
+ 
+ .l1::before,
+ .l1::after {
+	animation: clockwiseZ 2.5s infinite;
+ }
+ 
+ .l2::after,
+ .l2::before {
+	animation: anticlockwiseZ 2.5s infinite;
+ }
+ 
+ @keyframes clockwiseZ {
+	0%, 100% {
+	 transform: rotateY(0);
+	}
+ 
+	50% {
+	 transform: rotateY(180deg) skew(-10deg, -5deg);
+	}
+ }
+ 
+ @keyframes anticlockwiseZ {
+	0%, 100% {
+	 transform: rotateX(0);
+	}
+ 
+	50% {
+	 transform: rotateX(-180deg) skew(10deg, 5deg);
+	}
+ }
