--- a/css/main.scss
+++ b/css/main.scss
@@ -40,6 +40,12 @@ $background-color_5: #ddd;
   font-weight: bold;
 }
 
+@font-face {
+  font-family: Magna;
+  src: url(/fonts/Magna.ttf);
+  font-weight: bold;
+}
+
 @mixin flex-column {
   display: flex;
   flex-direction: column;
@@ -145,10 +151,11 @@ ul {
 
 .name {
   font-size: 5rem;
+	font-family: Neo;
 }
 
 .imagenear {
-  width: 15rem;
+  width: 30rem;
 }
 
 .servicecards {
@@ -279,7 +286,7 @@ ul {
 .introtext {
   font-size: 3.5rem;
   color: $color_6;
-  font-family: $font-family_5;
+  font-family: Magna;
   text-align: left;
 }
 .introtext2 {
@@ -311,14 +318,26 @@ p {
   width: 50%;
 }
 .rightpart {
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
   img {
     width: 30rem;
     z-index: 101;
   }
+}
+
+.firstlayer{
+	animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+.uplayer{
+	position: absolute;
+	top: 0;
+	img{
+		width: 30rem;
+		z-index: 10000;
+	}
 }
 span {
   color: $color_4;
@@ -404,6 +423,11 @@ span {
   position: relative;
   top: -150px;
 }
+
+.text{
+	color: #e6e5e5;
+}
+
 .textabout {
   display: flex;
   align-items: center;
@@ -602,12 +626,10 @@ span {
   }
 }
 .row1 {
-  display: flex;
-  overflow-x: scroll;
-  white-space: nowrap;
-  width: 70rem;
+  display: grid;
+grid-template-columns: 1fr 1fr;
   padding: 2rem;
-  gap: 2rem;
+  gap: 3rem;
   border-radius: 50px;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
     rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
@@ -619,29 +641,30 @@ span {
 }
 
 .cards {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  gap: 4rem;
   margin-left: 5rem;
   border-radius: 30px;
 }
 .card1 {
   background-color: $background-color_2;
-  width: 20rem;
-  height: 20rem;
-  padding: 1rem;
+  width: 15rem;
+  height: auto;
+	padding: 1rem;
   border-radius: 30px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  @include flex-column-center();
+  display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 
   img {
-    width: 18rem;
-    height: 10rem;
-    border-radius: 10px;
-    border: 1px solid black;
+    width: 100%;
+		border-radius: 10px;
   }
 
   h3 {
@@ -827,7 +850,7 @@ input:focus {
     transform: translate(0, 0px);
   }
   50% {
-    transform: translate(0, 15px);
+    transform: translate(0, 10px);
   }
   100% {
     transform: translate(0, -0px);
