--- a/css/main.scss
+++ b/css/main.scss
@@ -255,6 +255,12 @@ ul {
   font-family: $font-family_3;
   font-size: 3.5rem;
 }
+
+.spanpreloader {
+  font-family: $font-family_3;
+  font-size: 2rem;
+	color: #000;
+}
 .contactbutton {
   font-size: 1.3rem;
   color: $color_5;
@@ -864,6 +870,7 @@ input:focus {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -876,61 +883,162 @@ input:focus {
 #loading-image {
   position: absolute;
   z-index: 100;
-}
-
-.spinner {
-	border: 0 solid transparent;
-	border-radius: 50%;
-	width: 50px;
-	height: 50px;
- }
- 
- .loader {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: inherit;
-	height: inherit;
-	position: absolute;
- }
+	flex-direction: column;
+
+	h1{
+		margin-top: 1rem;
+		font-family: $font-family_3;
+		color: #000;
+		font-size: 2rem;
+	}
+}
+
+
+.fadeOut {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+@keyframes square-animation {
+	0% {
+	 left: 0;
+	 top: 0;
+	}
  
- .loader::before,
- .loader::after {
-	content: '';
-	border: 3px solid #505065;
-	border-radius: 50%;
-	width: inherit;
-	height: inherit;
-	position: absolute;
-	opacity: 1;
- }
+	10.5% {
+	 left: 0;
+	 top: 0;
+	}
  
- .l1::before,
- .l1::after {
-	animation: clockwiseZ 2.5s infinite;
- }
+	12.5% {
+	 left: 32px;
+	 top: 0;
+	}
  
- .l2::after,
- .l2::before {
-	animation: anticlockwiseZ 2.5s infinite;
- }
+	23% {
+	 left: 32px;
+	 top: 0;
+	}
  
- @keyframes clockwiseZ {
-	0%, 100% {
-	 transform: rotateY(0);
+	25% {
+	 left: 64px;
+	 top: 0;
+	}
+ 
+	35.5% {
+	 left: 64px;
+	 top: 0;
+	}
+ 
+	37.5% {
+	 left: 64px;
+	 top: 32px;
+	}
+ 
+	48% {
+	 left: 64px;
+	 top: 32px;
 	}
  
 	50% {
-	 transform: rotateY(180deg) skew(-10deg, -5deg);
+	 left: 32px;
+	 top: 32px;
+	}
+ 
+	60.5% {
+	 left: 32px;
+	 top: 32px;
+	}
+ 
+	62.5% {
+	 left: 32px;
+	 top: 64px;
+	}
+ 
+	73% {
+	 left: 32px;
+	 top: 64px;
+	}
+ 
+	75% {
+	 left: 0;
+	 top: 64px;
+	}
+ 
+	85.5% {
+	 left: 0;
+	 top: 64px;
+	}
+ 
+	87.5% {
+	 left: 0;
+	 top: 32px;
+	}
+ 
+	98% {
+	 left: 0;
+	 top: 32px;
+	}
+ 
+	100% {
+	 left: 0;
+	 top: 0;
 	}
  }
  
- @keyframes anticlockwiseZ {
-	0%, 100% {
-	 transform: rotateX(0);
-	}
+ .loader {
+	position: relative;
+	width: 96px;
+	height: 96px;
+	transform: rotate(45deg);
+ }
  
-	50% {
-	 transform: rotateX(-180deg) skew(10deg, 5deg);
-	}
+ .loader-square {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 28px;
+	height: 28px;
+	margin: 2px;
+	border-radius: 0px;
+	background: #6c63ff;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	animation: square-animation 10s ease-in-out infinite both;
+ }
+ 
+ .loader-square:nth-of-type(0) {
+	animation-delay: 0s;
+ }
+ 
+ .loader-square:nth-of-type(1) {
+	animation-delay: -1.4285714286s;
+ }
+ 
+ .loader-square:nth-of-type(2) {
+	animation-delay: -2.8571428571s;
+ }
+ 
+ .loader-square:nth-of-type(3) {
+	animation-delay: -4.2857142857s;
+ }
+ 
+ .loader-square:nth-of-type(4) {
+	animation-delay: -5.7142857143s;
+ }
+ 
+ .loader-square:nth-of-type(5) {
+	animation-delay: -7.1428571429s;
+ }
+ 
+ .loader-square:nth-of-type(6) {
+	animation-delay: -8.5714285714s;
+ }
+ 
+ .loader-square:nth-of-type(7) {
+	animation-delay: -10s;
  }
