--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ ul li:hover {
   -webkit-backdrop-filter: blur(5px);
   position: relative;
   overflow-x: hidden;
-  background-color: #6c63ff;
+  background-color: #6C63FF;
   margin-bottom: 1rem;
 }
 
@@ -92,8 +92,11 @@ ul li:hover {
 
 .firstpage {
   padding: 2rem 5rem;
-  background-color: #6c63ff;
   z-index: 20;
+  background: radial-gradient(circle, #000000 10%, transparent 11%);
+  background-size: 3em 3em;
+  background-color: #6C63FF;
+  opacity: 1;
 }
 
 .myservices {
@@ -157,7 +160,7 @@ ul li:hover {
 }
 
 .noback {
-  background: transparent !important;
+  background: #6C63FF !important;
   color: white !important;
 }
 
@@ -280,12 +283,25 @@ ul li:hover {
   width: 100%;
   margin-top: 1rem;
   font-size: 1rem;
-  text-align: left;
+  text-align: center;
 }
 
 .introname {
   padding: 1rem;
   text-align: center;
+  background-color: #6C63FF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.about {
+  background-color: #6C63FF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 p {
@@ -380,8 +396,9 @@ span {
 .button {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 1rem;
+  width: 100%;
 }
 
 .arrow {
@@ -397,7 +414,10 @@ span {
 
 .wave {
   width: 100%;
-  background-color: #6c63ff;
+  background: radial-gradient(circle, #000000 10%, transparent 11%);
+  background-size: 3em 3em;
+  background-color: #6C63FF;
+  opacity: 1;
   margin-top: 5rem;
 }
 
@@ -451,7 +471,10 @@ span {
 }
 .priorities::after {
   content: "";
-  background-color: #6c63ff;
+  background: linear-gradient(45deg, transparent 49%, #000000 49% 51%, transparent 51%), linear-gradient(-45deg, transparent 49%, #000000 49% 51%, transparent 51%);
+  background-size: 3em 3em;
+  background-color: #6C63FF;
+  opacity: 1;
   position: absolute;
   width: 100%;
   inset: 0;
@@ -642,6 +665,7 @@ span {
   gap: 3rem;
   border-radius: 50px;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  background-color: #6C63FF;
 }
 .row1::-webkit-scrollbar {
   display: none;
@@ -706,8 +730,11 @@ footer {
   font-size: 0.35rem;
   padding: 2rem;
   text-transform: uppercase;
-  background-color: #6c63ff;
-  border-top: 1px solid #fafafa;
+  background: radial-gradient(circle, #000000 10%, transparent 11%), radial-gradient(circle at bottom left, #000000 5%, transparent 6%), radial-gradient(circle at bottom right, #000000 5%, transparent 6%), radial-gradient(circle at top left, #000000 5%, transparent 6%), radial-gradient(circle at top right, #000000 5%, transparent 6%);
+  background-size: 3em 3em;
+  background-color: #6C63FF;
+  opacity: 1;
+  border-top: 5px solid #fafafa;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -719,10 +746,10 @@ footer h1 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 footer input::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.693);
+  color: white;
 }
 footer input::placeholder {
-  color: rgba(255, 255, 255, 0.693);
+  color: white;
 }
 footer form {
   display: flex;
@@ -784,7 +811,7 @@ footer .buttoncontact {
   outline: none;
   border-radius: 9px;
   border: 1px solid white;
-  background: transparent;
+  background: #6C63FF;
   color: white;
 }
 footer a {
