--- a/css/main.scss
+++ b/css/main.scss
@@ -122,7 +122,7 @@ ul {
   -webkit-backdrop-filter: blur(5px);
   position: relative;
   overflow-x: hidden;
-  background-color: $background-color_1;
+	background-color: #6C63FF;
   margin-bottom: 1rem;
 }
 
@@ -132,8 +132,11 @@ ul {
 
 .firstpage {
   padding: 2rem 5rem;
-  background-color: $background-color_1;
   z-index: 20;
+	background: radial-gradient(circle, #000000 10%, transparent 11%);
+	background-size: 3em 3em;
+	background-color: #6C63FF;
+	opacity: 1;
 }
 .myservices {
   display: flex;
@@ -192,7 +195,7 @@ ul {
 }
 
 .noback {
-  background: transparent !important;
+  background: #6C63FF !important;
   color: white !important;
 }
 
@@ -308,12 +311,20 @@ ul {
   width: 100%;
   margin-top: 1rem;
   font-size: 1rem;
-  text-align: left;
+  text-align: center;
 }
 .introname {
   padding: 1rem;
   text-align: center;
+	background-color: #6C63FF;
+	@include flex-column-center();
 }
+
+.about{
+	background-color: #6C63FF;
+	@include flex-column-center();
+}
+
 p {
   margin-top: 2rem;
   width: 90%;
@@ -398,8 +409,9 @@ span {
 .button {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 1rem;
+	width: 100%;
 }
 .arrow {
   display: flex;
@@ -413,7 +425,10 @@ span {
 }
 .wave {
   width: 100%;
-  background-color: $background-color_1;
+	background: radial-gradient(circle, #000000 10%, transparent 11%);
+	background-size: 3em 3em;
+	background-color: #6C63FF;
+	opacity: 1;
   margin-top: 5rem;
 }
 .wave2 {
@@ -463,7 +478,10 @@ span {
   padding: 5rem;
   &::after {
     content: "";
-    background-color: $background-color_1;
+		background: linear-gradient(45deg, transparent 49%, #000000 49% 51%, transparent 51%) , linear-gradient(-45deg, transparent 49%, #000000 49% 51%, transparent 51%);
+		background-size: 3em 3em;
+		background-color: #6C63FF;
+		opacity: 1;
     position: absolute;
 		width: 100%;
     inset: 0;
@@ -640,6 +658,7 @@ grid-template-columns: 1fr 1fr;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
     rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+		background-color: #6C63FF;
 
   &::-webkit-scrollbar {
     display: none;
@@ -707,8 +726,11 @@ footer {
   font-size: 0.35rem;
   padding: 2rem;
   text-transform: uppercase;
-  background-color: $background-color_1;
-  border-top: 1px solid #fafafa;
+	background: radial-gradient(circle, #000000 10%, transparent 11%),radial-gradient(circle at bottom left, #000000 5%, transparent 6%),radial-gradient(circle at bottom right, #000000 5%, transparent 6%),radial-gradient(circle at top left, #000000 5%, transparent 6%),radial-gradient(circle at top right, #000000 5%, transparent 6%);
+	background-size: 3em 3em;
+	background-color: #6C63FF;
+	opacity: 1;
+  border-top: 5px solid #fafafa;
   @include flex-column-center();
   gap: 2rem;
   h1 {
@@ -717,7 +739,7 @@ footer {
   }
 
   input::placeholder {
-    color: rgba(255, 255, 255, 0.693);
+    color: white;
   }
 
   form {
@@ -780,7 +802,7 @@ footer {
     outline: none;
     border-radius: 9px;
     border: 1px solid white;
-    background: transparent;
+    background: #6C63FF;
     color: white;
   }
 
