--- a/css/main.css
+++ b/css/main.css
@@ -471,7 +471,6 @@ span {
 }
 .priorities::after {
   content: "";
-  background: linear-gradient(45deg, transparent 49%, #000000 49% 51%, transparent 51%), linear-gradient(-45deg, transparent 49%, #000000 49% 51%, transparent 51%);
   background-size: 3em 3em;
   background-color: #6C63FF;
   opacity: 1;
@@ -695,11 +694,12 @@ span {
 .card1 img {
   width: 100%;
   border-radius: 10px;
+  border: #000 solid 1px;
 }
 .card1 h3 {
   margin-top: 1rem;
   font-family: Noe;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   transition: all 0.5s;
 }
 .card1 h3:hover {
