--- a/css/main.scss
+++ b/css/main.scss
@@ -478,7 +478,6 @@ span {
   padding: 5rem;
   &::after {
     content: "";
-		background: linear-gradient(45deg, transparent 49%, #000000 49% 51%, transparent 51%) , linear-gradient(-45deg, transparent 49%, #000000 49% 51%, transparent 51%);
 		background-size: 3em 3em;
 		background-color: #6C63FF;
 		opacity: 1;
@@ -690,12 +689,13 @@ grid-template-columns: 1fr 1fr;
   img {
     width: 100%;
 		border-radius: 10px;
+		border: #000 solid 1px;
   }
 
   h3 {
     margin-top: 1rem;
     font-family: $font-family_5;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     transition: all 0.5s;
     &:hover {
       color: #6c63ff;
